--- a/Example/TNSlider/Base.lproj/Main.storyboard
+++ b/Example/TNSlider/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,15 +25,33 @@
                                 <rect key="frame" x="16" y="186" width="343" height="31"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="value">
-                                        <real key="value" value="1"/>
+                                        <real key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="minimum">
-                                        <real key="value" value="4"/>
+                                        <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="maximum">
                                         <real key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="thumbTextColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="thumbBackgroundColor">
+                                        <color key="value" red="0.28235294119999998" green="0.46666666670000001" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="trackMaxColor">
+                                        <color key="value" red="0.94901960780000005" green="0.87058823529999996" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="trackMinColor">
+                                        <color key="value" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="step">
+                                        <real key="value" value="0.0"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="sliderValueChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="dkm-Le-qBb"/>
+                                </connections>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TNSlider" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dN0-H8-Tbh">
                                 <rect key="frame" x="152" y="52" width="71.5" height="21"/>
@@ -46,19 +65,104 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="soP-cR-fjf">
+                                <rect key="frame" x="143.5" y="313.5" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.66274509800000003" green="0.2666666667" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="Tgo-rT-GoE"/>
+                                    <constraint firstAttribute="height" constant="44" id="p2B-ZO-LBO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="-">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="minusButtonClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="8j8-lW-331"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G3J-z3-VZe">
+                                <rect key="frame" x="227.5" y="313.5" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.66274509800000003" green="0.2666666667" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="aVg-vT-aEP"/>
+                                    <constraint firstAttribute="height" constant="44" id="dbA-7F-OUq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                <state key="normal" title="+">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="plusButtonClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="vGV-pW-ThN"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5zL-4F-goj">
+                                <rect key="frame" x="84" y="259" width="199" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceV-Xa-Ktq">
+                                <rect key="frame" x="32" y="264" width="36" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eql-wb-I03">
+                                <rect key="frame" x="32" y="325" width="83" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YrP-AB-ygu">
+                                <rect key="frame" x="299" y="259" width="44" height="30"/>
+                                <color key="backgroundColor" red="0.66274509800000003" green="0.2666666667" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cOn-yg-HQb"/>
+                                    <constraint firstAttribute="width" constant="44" id="ngA-pX-TR2"/>
+                                </constraints>
+                                <state key="normal" title="Set">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="setStepButtonClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="yrt-bg-GDB"/>
+                                </connections>
+                            </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="1" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="HGg-tx-LWN">
+                                <rect key="frame" x="150" y="426" width="118" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="YrP-AB-ygu" firstAttribute="leading" secondItem="5zL-4F-goj" secondAttribute="trailing" constant="16" id="1xg-cr-uTP"/>
                             <constraint firstItem="Hpf-hu-0ft" firstAttribute="top" secondItem="L0s-WN-k7o" secondAttribute="bottom" constant="32" id="3mq-07-2Sc"/>
+                            <constraint firstItem="ceV-Xa-Ktq" firstAttribute="top" secondItem="Hpf-hu-0ft" secondAttribute="bottom" constant="47" id="7LK-1o-Una"/>
+                            <constraint firstAttribute="trailing" secondItem="YrP-AB-ygu" secondAttribute="trailing" constant="32" id="89w-w8-I4U"/>
                             <constraint firstItem="L0s-WN-k7o" firstAttribute="top" secondItem="dN0-H8-Tbh" secondAttribute="bottom" constant="40" id="AcU-T0-z30"/>
                             <constraint firstItem="dN0-H8-Tbh" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="32" id="F4I-cP-WCm"/>
+                            <constraint firstItem="G3J-z3-VZe" firstAttribute="leading" secondItem="soP-cR-fjf" secondAttribute="trailing" constant="40" id="Fnb-gV-KqD"/>
+                            <constraint firstItem="eql-wb-I03" firstAttribute="top" secondItem="ceV-Xa-Ktq" secondAttribute="bottom" constant="40" id="GKP-8u-MGV"/>
+                            <constraint firstItem="YrP-AB-ygu" firstAttribute="centerY" secondItem="5zL-4F-goj" secondAttribute="centerY" id="IY3-fy-HVP"/>
+                            <constraint firstItem="eql-wb-I03" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="32" id="JSJ-mN-Rjq"/>
                             <constraint firstItem="L0s-WN-k7o" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="24" id="MIk-ZL-9Zu"/>
+                            <constraint firstItem="ceV-Xa-Ktq" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="32" id="XYJ-pO-JOo"/>
                             <constraint firstAttribute="trailing" secondItem="L0s-WN-k7o" secondAttribute="trailing" constant="24" id="a8e-hv-nYv"/>
+                            <constraint firstItem="5zL-4F-goj" firstAttribute="leading" secondItem="ceV-Xa-Ktq" secondAttribute="trailing" constant="16" id="fjC-ie-P9a"/>
                             <constraint firstItem="Hpf-hu-0ft" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="ghe-u3-WNK"/>
                             <constraint firstAttribute="trailing" secondItem="Hpf-hu-0ft" secondAttribute="trailing" constant="16" id="lBM-LK-UAr"/>
+                            <constraint firstItem="soP-cR-fjf" firstAttribute="centerY" secondItem="eql-wb-I03" secondAttribute="centerY" id="r93-bs-U23"/>
                             <constraint firstItem="dN0-H8-Tbh" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="sU7-wz-J12"/>
+                            <constraint firstItem="G3J-z3-VZe" firstAttribute="top" secondItem="soP-cR-fjf" secondAttribute="top" id="tep-4f-m1R"/>
+                            <constraint firstItem="5zL-4F-goj" firstAttribute="centerY" secondItem="ceV-Xa-Ktq" secondAttribute="centerY" id="uLH-3J-PGn"/>
+                            <constraint firstItem="soP-cR-fjf" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="zmf-0H-oe8"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="minusButton" destination="soP-cR-fjf" id="xOj-c7-S1j"/>
+                        <outlet property="plusButton" destination="G3J-z3-VZe" id="Vg1-5b-a67"/>
+                        <outlet property="slider" destination="Hpf-hu-0ft" id="yW7-am-4Yb"/>
+                        <outlet property="stepTextField" destination="5zL-4F-goj" id="Vhx-KR-WS5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
